Use napi-rs template

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+napi = { version = "2", features = ["async"] }
+napi-derive = "2"
 libc = "0.2"
 pty = "0.2"
 
-[dependencies.neon]
-version = "0.10"
-default-features = false
-features = ["napi-6", "channel-api"]
+[build-dependencies]
+napi-build = "2"
+
+[profile.release]
+lto = true
