--- a/package.json
+++ b/package.json
@@ -10,36 +10,73 @@
 	"bugs": {
 		"url": "https://github.com/chrmarti/minpty/issues"
 	},
-	"license": "SEE LICENSE IN LICENSE.txt",
+	"license": "MIT",
+	"napi": {
+		"name": "minpty",
+		"triples": {
+			"defaults": true,
+			"additional": [
+				"x86_64-unknown-linux-musl",
+				"aarch64-unknown-linux-gnu",
+				"i686-pc-windows-msvc",
+				"armv7-unknown-linux-gnueabihf",
+				"aarch64-apple-darwin",
+				"aarch64-linux-android",
+				"x86_64-unknown-freebsd",
+				"aarch64-unknown-linux-musl",
+				"aarch64-pc-windows-msvc",
+				"armv7-linux-androideabi"
+			]
+		}
+	},
 	"engines": {
-		"node": ">=14.14.0"
+		"node": ">= 10"
 	},
 	"main": "dist/main.js",
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/",
+		"access": "public"
+	},
 	"scripts": {
-		"ci": "npm-run-all package test",
-		"test": "mocha --exit dist/test.js",
-		"compile": "npm-run-all tsc-b cargo-build",
-		"tsc-b": "tsc -b",
-		"cargo-build": "cargo-cp-artifact -nc dist/lib.node -- cargo build --message-format=json-render-diagnostics --release",
-		"watch": "npm-run-all tsc-b-w",
-		"tsc-b-w": "tsc -b -w",
-		"package": "npm-run-all compile npm-pack",
-		"npm-pack": "npm pack",
-		"clean": "rimraf dist target"
-		},
+		"artifacts": "napi artifacts",
+		"bench": "node -r @swc-node/register benchmark/bench.ts",
+		"build": "napi build --platform --release",
+		"build:ts": "tsc -b",
+		"build:debug": "napi build --platform",
+		"lint": "eslint src -c ./.eslintrc.yml",
+		"prepublishOnly": "napi prepublish -t npm",
+		"test": "cross-env TS_NODE_PROJECT=tsconfig.json mocha -r ts-node/register --exit src/test.ts",
+		"version": "napi version"
+	},
 	"files": [
 		"LICENSE.txt",
+		"dist/main.d.ts",
 		"dist/main.js",
-		"dist/lib.node",
-		"package.json"
+		"package.json",
+		"index.js"
 	],
 	"devDependencies": {
+		"@napi-rs/cli": "^2.11.4",
+		"@swc-node/register": "^1.5.1",
 		"@types/mocha": "^9.1.0",
 		"@types/node": "^16.11.7",
-		"cargo-cp-artifact": "^0.1",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"benny": "^3.7.1",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.23.0",
+		"eslint-plugin-import": "^2.26.0",
+		"husky": "^8.0.1",
+		"lint-staged": "^13.0.3",
 		"mocha": "^9.2.1",
 		"npm-run-all": "^4.1.5",
-		"rimraf": "^3.0.2",
-		"typescript": "^4.5.5"
-	}
+		"ts-node": "^10.4.0",
+		"typescript": "^4.8.2"
+	},
+	"lint-staged": {
+		"*.@(js|ts|tsx)": [
+			"eslint -c .eslintrc.yml --fix"
+		]
+	},
+	"packageManager": "yarn@3.2.3"
 }
